# Bili_BookTranslater

./: .gitignore  2single.py  Bili.spec  LICENSE  Modelfile  README.md  README_tw.md  build_dmg.sh  config.json  disclaimer.md  gui.py  gui_test.py  gui拷貝.py  install.command  prompt_cyber.json  prompt_通用.json  pyproject.toml  requirements.txt  run_gui.command  test_gemini_models.py
.agent/workflows/: build_dmg.md  package_dmg.md  task_context_aware_glossary.md
book_maker/: cli.py  config.py  glossary_manager.py  obok.py  utils.py
book_maker/loader/: __init__.py  accumulation_mixin.py  base_loader.py  docx_loader.py  epub_loader.py  helper.py  md_loader.py  srt_loader.py  txt_loader.py
book_maker/translator/: __init__.py  base_translator.py  chatgptapi_translator.py  gemini_translator.py
dmg_root/Bili.app/Contents/: Info.plist
dmg_root/Bili.app/Contents/Frameworks/: google_api_core-2.21.0.dist-info  google_api_python_client-2.149.0.dist-info  importlib_metadata-7.1.0.dist-info  prompt_學術.json  prompt_繁中.json  prompt_通用.json
dmg_root/Bili.app/Contents/Frameworks/Python.framework/Versions/3.10/: Python
dmg_root/Bili.app/Contents/Resources/: logo.icns  prompt_學術.json  prompt_繁中.json
dmg_root/Bili.app/Contents/Resources/gui/styles/: dark_theme.qss
dmg_root/Bili.app/Contents/Resources/icons/: logo3.icns
dmg_root/Bili.app/Contents/_CodeSignature/: CodeResources
gui/styles/: dark_theme.qss
icons/: logo2.icns
tests/: gui_new.py  gui_old_stable.py  test_model.py
